--- a/presentation/ai_eval_presentation.Rmd
+++ b/presentation/ai_eval_presentation.Rmd
@@ -8,8 +8,6 @@ output:
     widescreen: true
     smaller: true
     css: styles.css
-  powerpoint_presentation:
-    keep_md: true
 ---
 
 ```{r setup, include=FALSE}
@@ -18,12 +16,21 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 
 <style>
 .title-slide {
-  background: linear-gradient(135deg, #2c3e50 0%, #34495e 50%, #2c3e50 100%);
-  color: white;
+  background: #ffffff;
+  color: #2c3e50;
 }
 .title-slide h1 {
-  color: #ecf0f1;
+  color: #2c3e50;
   font-weight: 700;
+}
+.title-slide h2 {
+  color: #667eea;
+}
+.title-slide h3 {
+  color: #555;
+}
+.title-slide p {
+  color: #2c3e50;
 }
 </style>
 
@@ -52,6 +59,8 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 
 - **Reality**: All methods are complementary and should be used together at different stages
 
+# The Framework {.smaller}
+
 ## The Solution: Four-Level Framework
 
 This playbook organizes evaluation around four levels:
@@ -66,8 +75,8 @@ This playbook organizes evaluation around four levels:
 
 ## {.hidden}
 
-```{r, echo=FALSE, out.height="100px", fig.align="center"}
-knitr::include_graphics("images/ai-eval-framework.jpg")
+```{r, echo=FALSE, out.width="80%", fig.align="center"}
+knitr::include_graphics("images/ai-eval-framework.png")
 ```
 
 ## Continuous Evaluation: The Central Element
@@ -222,6 +231,8 @@ Evaluation is a **team sport** - no single role covers all four levels.
 4. **Use Shared Evaluation Language**: Common vocabulary using levels
 5. **Use Tools that Support Collaboration**: Evaluation platforms, dashboards, experimentation tools
 
+# Level 1: Model Evaluation {.smaller}
+
 ## Level 1: Model Evaluation
 
 **Question**: Does the AI model produce the desired responses?
@@ -307,7 +318,7 @@ Engineering translates qualitative rubric into quantitative metrics (e.g., "Trus
 
 Product Owner ensures quality, scope, and representativeness. Domain Experts author ideal answers. Engineering provides technical support.
 
-## Step 3: Dataset Sources
+## Step 3: Develop Golden Dataset
 
 | Source | When to Use | Notes |
 |--------|-------------|-------|
@@ -315,7 +326,7 @@ Product Owner ensures quality, scope, and representativeness. Domain Experts aut
 | **Human-annotated data** | Building new AI offering | Generate questions + expert answers. **Warning**: Don't use LLM to generate answers for experts to verify - correcting is harder than creating |
 | **Customize public datasets** | High-quality public dataset exists | Subset and augment to match your context |
 
-## Step 3: Good Dataset Characteristics
+## Step 3: Develop Golden Dataset
 
 A good dataset should cover:
 
@@ -329,7 +340,7 @@ A good dataset should cover:
 
 Automate evaluations and integrate into CI/CD pipeline. Product Owner monitors performance trends over time.
 
-## Step 4: Evaluation Frequency Strategy
+## Step 4: Running Automated Evals
 
 | Eval Type | Examples | Frequency | When |
 |-----------|----------|-----------|------|
@@ -344,7 +355,7 @@ Automate evaluations and integrate into CI/CD pipeline. Product Owner monitors p
 
 Initial scores will reveal areas for improvement. Results are a diagnostic tool, not a final grade. Engineering analyzes results and diagnoses root causes. Product Owner prioritizes refinement work.
 
-## Step 5: Refinement Process
+## Step 5: Measure Scores and Refine
 
 | Step | Action | Purpose |
 |------|--------|---------|
@@ -380,6 +391,8 @@ Product Owner ensures red-teaming is conducted and prioritizes remediation. Tech
 3. **Prioritize**: Review by severity/likelihood, assign owners, rerun after fixes
 
 **Resources**: [Red-Teaming AI for Social Good Playbook](https://humane-intelligence.org/insights/research/#:~:text=UNESCO's%20Red%20Teaming%20Playbook%20is,promote%20ethical%20and%20inclusive%20AI.) (UNESCO & Human Intelligence, 2024), [Planning Red-Teaming for Large Language Models](https://learn.microsoft.com/en-us/azure/ai-foundry/openai/concepts/red-teaming) (Microsoft Learn, 2024)
+
+# Level 2: Product Evaluation {.smaller}
 
 ## Level 2: Product Evaluation
 
@@ -419,6 +432,8 @@ Technology companies frequently evaluate and improve products by collecting user
 | **Non-Engagement** | Item-Level Surveys | "Helpful" ratings, "want more" votes |
 | **Non-Engagement** | User-Level Surveys | Overall satisfaction, usability |
 | **Non-Engagement** | User Control | Topic subscriptions, filtering |
+
+# Level 3: User Evaluation {.smaller}
 
 ## Level 3: User Evaluation
 
@@ -465,6 +480,8 @@ User psychological and behavioral changes are early indicators of long-term deve
 3. **NLP and Text Analysis**: Sentiment analysis, topic modeling, LIWC, LLM-based analysis
 
 4. **Off-Platform Measures**: Longer surveys, observer reports, objective performance data
+
+# Level 4: Impact Evaluation {.smaller}
 
 ## Level 4: Impact Evaluation
 
