--- a/docs/ai_eval_presentation.Rmd
+++ b/docs/ai_eval_presentation.Rmd
@@ -8,6 +8,8 @@ output:
     widescreen: true
     smaller: true
     css: styles.css
+    includes:
+      after_body: toc_script.html
 ---
 
 ```{r setup, include=FALSE}
